// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/config/external/chatgpt/Config.vue should be rendered properly 1`] = `
<div class="config-chatgpt">
  <div class="config-chatgpt__header">
    <div class="config-chatgpt__header__title">
      <div class="config-chatgpt__header__title__icon-container"><img src="https://weni-sp-push-dev.s3.sa-east-1.amazonaws.com/svg/logo-wwc.svg" class="config-chatgpt__header__title__icon-container__icon"></div>
      <div class="config-chatgpt__header__title__name">Weni Web Chat</div>
      <unnnicbutton-stub size="small" type="tertiary" iconcenter="close-1" class="config-chatgpt__header__title__close"></unnnicbutton-stub>
    </div> <span class="config-chatgpt__header__description">Configure how ChatGPT works in platform modules</span>
  </div>
  <div class="config-chatgpt__settings__content">
    <unnnic-tab-stub size="md" initialtab="flows" tabs="flows,general" class="config-chatgpt__tabs"><template></template>
      <div>
        <div class="config-chatgpt__settings__content__scroll"><span class="config-chatgpt__settings__content__description">
            Define how ChatGPT will behave when it responds to people in the Flows area.
          </span>
          <unnnic-text-area-stub size="md" label="Rules" value="rules" type="normal" errors="" class="config-chatgpt__settings__content__inputs__rules"></unnnic-text-area-stub>
          <unnnic-text-area-stub size="md" label="Knowledge base" value="base" type="normal" errors="" class="config-chatgpt__settings__content__inputs__knowledge"></unnnic-text-area-stub>
          <unnnic-label-stub label="Conversation style"></unnnic-label-stub>
          <unnnic-select-smart-stub options="[object Object],[object Object],[object Object]" value="[object Object]" size="md" type="normal" multiplewithoutselectsmessage=""></unnnic-select-smart-stub>
          <unnnic-label-stub label="Voice tone"></unnnic-label-stub>
          <unnnic-select-smart-stub options="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]" value="[object Object]" size="md" type="normal" multiplewithoutselectsmessage=""></unnnic-select-smart-stub>
          <unnnic-input-stub placeholder="Insert prompt text and press enter" type="normal" value="" nativetype="text" label="Insert prompts" iconright="keyboard-enter-1" size="md" mask="" class="config-chatgpt__settings__content__inputs__prompt"></unnnic-input-stub>
          <!---->
          <div class="config-chatgpt__settings__content__prompts-wrapper"></div>
        </div>
        <div class="config-chatgpt__settings__buttons">
          <unnnicbutton-stub size="large" text="Cancel" type="tertiary" class="config-chatgpt__settings__buttons__cancel"></unnnicbutton-stub>
          <unnnicbutton-stub size="large" text="Save modifications" type="secondary" disabled="true" class="config-chatgpt__settings__buttons__save"></unnnicbutton-stub>
        </div>
      </div> <template></template>
      <div class="config-chatgpt__general">
        <div class="config-chatgpt__settings__content__version-wrapper">
          <div>
            Version

            <unnnic-tooltip-stub text="Changing the version of ChatGPT can change the way with that the AI ​​generates the answers based on the knowledge base and rules." enabled="true" side="right" maxwidth="350px" class="config-chatgpt__settings__content__version__tooltip">
              <unnniciconsvg-stub icon="information-circle-4" size="sm" scheme="neutral-soft" class="config-chatgpt__settings__content__version__icon"></unnniciconsvg-stub>
            </unnnic-tooltip-stub>
          </div>
          <div class="config-chatgpt__settings__content__version-wrapper__options">
            <div data-v-c0c803b4="" class="unnnic-radio-container unnnic-radio-container--md" options="gpt-3.5-turbo-16k,gpt-3.5-turbo" label="Version"><span data-v-59b073b4="" data-v-c0c803b4="" class="unnnic-radio unnnic-icon unnnic-icon__size--md unnnic-icon-scheme--brand-weni"><svg viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="20" cy="20.0005" r="15" fill="#3B414D" class="primary"></circle><circle cx="20" cy="20.0005" r="6.66667" fill="white"></circle></svg></span><span data-v-c0c803b4="" class="label">
              gpt-3.5-turbo-16k
            </span></div>
            <div data-v-c0c803b4="" class="unnnic-radio-container unnnic-radio-container--md" options="gpt-3.5-turbo-16k,gpt-3.5-turbo" label="Version"><span data-v-59b073b4="" data-v-c0c803b4="" class="unnnic-radio unnnic-icon unnnic-icon__size--md unnnic-icon-scheme--neutral-soft"><svg viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="20" cy="20.0005" r="14.5" stroke="#3B414D" class="primary-stroke"></circle></svg></span><span data-v-c0c803b4="" class="label">
              gpt-3.5-turbo
            </span></div>
          </div>
        </div>
        <div class="config-chatgpt__general__field"><span>API-Token</span> <span> </span></div>
      </div>
    </unnnic-tab-stub>
  </div>
</div>
`;

exports[`components/config/external/chatgpt/Config.vue should be rendered properly without config 1`] = `
<div class="config-chatgpt">
  <div class="config-chatgpt__header">
    <div class="config-chatgpt__header__title">
      <div class="config-chatgpt__header__title__icon-container"><img src="https://weni-sp-push-dev.s3.sa-east-1.amazonaws.com/svg/logo-wwc.svg" class="config-chatgpt__header__title__icon-container__icon"></div>
      <div class="config-chatgpt__header__title__name">Weni Web Chat</div>
      <unnnicbutton-stub size="small" type="tertiary" iconcenter="close-1" class="config-chatgpt__header__title__close"></unnnicbutton-stub>
    </div> <span class="config-chatgpt__header__description">Configure how ChatGPT works in platform modules</span>
  </div>
  <div class="config-chatgpt__settings__content">
    <unnnic-tab-stub size="md" initialtab="flows" tabs="flows,general" class="config-chatgpt__tabs"><template></template>
      <div>
        <div class="config-chatgpt__settings__content__scroll"><span class="config-chatgpt__settings__content__description">
            Define how ChatGPT will behave when it responds to people in the Flows area.
          </span>
          <unnnic-text-area-stub size="md" label="Rules" type="normal" errors="" class="config-chatgpt__settings__content__inputs__rules"></unnnic-text-area-stub>
          <unnnic-text-area-stub size="md" label="Knowledge base" type="normal" errors="" class="config-chatgpt__settings__content__inputs__knowledge"></unnnic-text-area-stub>
          <unnnic-label-stub label="Conversation style"></unnnic-label-stub>
          <unnnic-select-smart-stub options="[object Object],[object Object],[object Object]" value="" size="md" type="normal" multiplewithoutselectsmessage=""></unnnic-select-smart-stub>
          <unnnic-label-stub label="Voice tone"></unnnic-label-stub>
          <unnnic-select-smart-stub options="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]" value="" size="md" type="normal" multiplewithoutselectsmessage=""></unnnic-select-smart-stub>
          <unnnic-input-stub placeholder="Insert prompt text and press enter" type="normal" value="" nativetype="text" label="Insert prompts" iconright="keyboard-enter-1" size="md" mask="" class="config-chatgpt__settings__content__inputs__prompt"></unnnic-input-stub>
          <!---->
          <div class="config-chatgpt__settings__content__prompts-wrapper"></div>
        </div>
        <div class="config-chatgpt__settings__buttons">
          <unnnicbutton-stub size="large" text="Cancel" type="tertiary" class="config-chatgpt__settings__buttons__cancel"></unnnicbutton-stub>
          <unnnicbutton-stub size="large" text="Save modifications" type="secondary" disabled="true" class="config-chatgpt__settings__buttons__save"></unnnicbutton-stub>
        </div>
      </div> <template></template>
      <div class="config-chatgpt__general">
        <div class="config-chatgpt__settings__content__version-wrapper">
          <div>
            Version

            <unnnic-tooltip-stub text="Changing the version of ChatGPT can change the way with that the AI ​​generates the answers based on the knowledge base and rules." enabled="true" side="right" maxwidth="350px" class="config-chatgpt__settings__content__version__tooltip">
              <unnniciconsvg-stub icon="information-circle-4" size="sm" scheme="neutral-soft" class="config-chatgpt__settings__content__version__icon"></unnniciconsvg-stub>
            </unnnic-tooltip-stub>
          </div>
          <div class="config-chatgpt__settings__content__version-wrapper__options">
            <div data-v-c0c803b4="" class="unnnic-radio-container unnnic-radio-container--md" options="gpt-3.5-turbo-16k,gpt-3.5-turbo" label="Version"><span data-v-59b073b4="" data-v-c0c803b4="" class="unnnic-radio unnnic-icon unnnic-icon__size--md unnnic-icon-scheme--brand-weni"><svg viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="20" cy="20.0005" r="15" fill="#3B414D" class="primary"></circle><circle cx="20" cy="20.0005" r="6.66667" fill="white"></circle></svg></span><span data-v-c0c803b4="" class="label">
              gpt-3.5-turbo-16k
            </span></div>
            <div data-v-c0c803b4="" class="unnnic-radio-container unnnic-radio-container--md" options="gpt-3.5-turbo-16k,gpt-3.5-turbo" label="Version"><span data-v-59b073b4="" data-v-c0c803b4="" class="unnnic-radio unnnic-icon unnnic-icon__size--md unnnic-icon-scheme--neutral-soft"><svg viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="20" cy="20.0005" r="14.5" stroke="#3B414D" class="primary-stroke"></circle></svg></span><span data-v-c0c803b4="" class="label">
              gpt-3.5-turbo
            </span></div>
          </div>
        </div>
        <div class="config-chatgpt__general__field"><span>API-Token</span> <span> </span></div>
      </div>
    </unnnic-tab-stub>
  </div>
</div>
`;
